first-example/manifests/istio/service_entry_oneagent.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: dynatrace-oneagent-hostnames
spec:
  hosts:
  - sg-eu-west-1-18-202-8-23-prod23-ireland.live.ruxit.com
  - sg-eu-west-1-52-31-108-81-prod23-ireland.live.ruxit.com
  - sg-eu-west-1-34-241-182-103-prod23-ireland.live.ruxit.com
  - sg-eu-west-1-34-241-58-226-prod23-ireland.live.ruxit.com
  - sg-eu-west-1-52-214-86-21-prod23-ireland.live.ruxit.com
  location: MESH_EXTERNAL
  ports:
  - number: 443
    name: HTTPS
    protocol: HTTPS
  resolution: DNS
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dynatrace-oneagent-hostnames
spec:
  hosts:
  - sg-eu-west-1-18-202-8-23-prod23-ireland.live.ruxit.com
  - sg-eu-west-1-52-31-108-81-prod23-ireland.live.ruxit.com
  - sg-eu-west-1-34-241-182-103-prod23-ireland.live.ruxit.com
  - sg-eu-west-1-34-241-58-226-prod23-ireland.live.ruxit.com
  - sg-eu-west-1-52-214-86-21-prod23-ireland.live.ruxit.com
  tls:
  - match:
    - port: 443
      sni_hosts:
      - sg-eu-west-1-18-202-8-23-prod23-ireland.live.ruxit.com
    route:
    - destination:
        host: sg-eu-west-1-18-202-8-23-prod23-ireland.live.ruxit.com
        port:
          number: 443
          name: HTTPS
  - match:
    - port: 443
      sni_hosts:
      - sg-eu-west-1-52-31-108-81-prod23-ireland.live.ruxit.com
    route:
    - destination:
        host: sg-eu-west-1-52-31-108-81-prod23-ireland.live.ruxit.com
        port:
          number: 443
          name: HTTPS
  - match:
    - port: 443
      sni_hosts:
      - sg-eu-west-1-34-241-182-103-prod23-ireland.live.ruxit.com
    route:
    - destination:
        host: sg-eu-west-1-34-241-182-103-prod23-ireland.live.ruxit.com
        port:
          number: 443
          name: HTTPS
  - match:
    - port: 443
      sni_hosts:
      - sg-eu-west-1-34-241-58-226-prod23-ireland.live.ruxit.com
    route:
    - destination:
        host: sg-eu-west-1-34-241-58-226-prod23-ireland.live.ruxit.com
        port:
          number: 443
          name: HTTPS
  - match:
    - port: 443
      sni_hosts:
      - sg-eu-west-1-52-214-86-21-prod23-ireland.live.ruxit.com
    route:
    - destination:
        host: sg-eu-west-1-52-214-86-21-prod23-ireland.live.ruxit.com
        port:
          number: 443
          name: HTTPS
